check difference in dataframe indices

--- a/carsus/io/tests/test_output_base.ipynb
+++ b/carsus/io/tests/test_output_base.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fname = f\"test_data_ku_{GFALL_IONS}_ch_{CHIANTI_IONS}_cm_{CMFGEN_IONS}.h5\""
+    "fname = f\"test_data_ku_{GFALL_IONS}_ch_{CHIANTI_IONS}_cm_{CMFGEN_IONS} (copy).h5\""
    ]
   },
   {
@@ -92,7 +92,7 @@
     "atomic_weights = NISTWeightsComp()\n",
     "ionization_energies = NISTIonizationEnergies(GFALL_IONS)\n",
     "gfall_reader = GFALLReader(ions=GFALL_IONS)\n",
-    "chianti_reader = ChiantiReader(ions=CHIANTI_IONS, collisions=True, priority=20)\n",
+    "# chianti_reader = ChiantiReader(ions=CHIANTI_IONS, collisions=True, priority=20)\n",
     "zeta_data = KnoxLongZeta()\n",
     "nndc_reader = NNDCReader(remote=True)\n",
     "\n",
@@ -433,6 +433,33 @@
    "outputs": [],
    "source": [
     "assert_frame_equal(decay_data, refdata['nuclear_decay_rad'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.set_option('display.max_rows', 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "decay_data.index.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "refdata['nuclear_decay_rad'].index.unique()"
    ]
   },
   {
