display indices in test-output notebook

--- a/carsus/io/tests/test_output_base.ipynb
+++ b/carsus/io/tests/test_output_base.ipynb
@@ -441,6 +441,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pd.set_option('display.max_rows', 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "decay_data.index.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "refdata['nuclear_decay_rad'].index.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "refdata.close()"
    ]
   }
